# emx-mistral-ocr-cli

./: .gitignore  AGENTS.md  README.md  mistral_ocr_cli.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
